# FIIW_projects_bachelor

./: .gitignore  CMakeLists.txt  Chaturaji_global.h  Discussion.md  Discussion.txt  Dockerfile  Main.c  README.md  alda.md  chaturaji.cpp  chaturaji.h  docker-compose.yml  examen.txt  final_uml.txt  graph.graphml  main.cpp  practicum-1-team-12-ebbe-mathias.vcxproj  report.tex  requirements.txt  uitest.hs  uml.txt  utils.py  week8_start.hs  wz1-2.hs
CYBER_Taak/webots/controllers/4omni_wheels/: CMakeLists.txt  Motion.h  icecream.hpp
Chaturaji/: .gitignore  CMakeLists.txt  main.cpp  saveFile.txt  startingFile.txt
Chaturaji/Saves/: aaaaaaaa.txt  saveFile.txt  startingFile.json  startingFile.txt  test.txt
Chaturaji/cpp_Files/game/: Board.cpp  Game.cpp  Pattern.cpp  Piece.cpp  Player.cpp
Chaturaji/cpp_Files/io/: Controller.cpp  FileIO.cpp  View.cpp
Chaturaji/cpp_files/: Board.cpp  Fileio.cpp  Fileio.h  Game.h  Pattern.cpp  Piece.cpp  Player.cpp
Chaturaji/cpp_files/game/: Game.cpp  Pattern.cpp  Piece.cpp  Player.cpp
Chaturaji/cpp_files/io/: FileIO.cpp  TerminalBoardView.cpp  TerminalInput.cpp
Chaturaji/h_Files/game/: Board.h  Game.h  Pattern.h  Piece.h  Player.h
Chaturaji/h_Files/io/: Controller.h  FileIO.h  View.h
Chaturaji/h_files/game/: Board.h  Pattern.h  Piece.h  Player.h
Chaturaji/h_files/io/: FileIO.h  TerminalBoardView.h  TerminalInput.h
Chaturaji/src/: main.cpp
Chaturaji/src/controller/: CLI_Controller.cpp  CLI_Controller.h  ConsoleIO.cpp  ConsoleIO.h  Controller.cpp  Controller.h  FileIO.cpp  FileIO.h  GameController.cpp  GameController.h
Chaturaji/src/model/: Board.cpp  Board.h  Dice.cpp  Dice.h  FileIO.cpp  FileIO.h  Game.cpp  Game.h  Pattern.h  PatternMover.cpp  PatternMover.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Square.cpp  Square.h
Chaturaji/src/model/enums_and_structs/: ClassifiedMove.h  PieceType.h
Chaturaji/src/model/game/: Bot.cpp  Bot.h  Color.h  Dice.cpp  Dice.h  Game.cpp  Game.h  Player.cpp  Player.h
Chaturaji/src/model/game/board/: BadPieceClass.cpp  BadPieceClass.h  Board.cpp  Board.h  BoardQuerier.cpp  BoardQuerier.h  Piece.cpp  Piece.h  SquareDimension.cpp  SquareDimension.h
Chaturaji/src/model/game/bots/: Aggressive.cpp  Aggressive.h  AggressiveBot.h  AggressiveMoveStrategy.cpp  AggressiveMoveStrategy.h  Bot.cpp  Bot.h  MoveStrategy.h  Passive.cpp  Passive.h  PassiveBot.h  PassiveMoveStrategy.cpp  PassiveMoveStrategy.h
Chaturaji/src/model/game/enums_and_structs/: ClassifiedMove.h  Color.h  EnumStringifier.cpp  EnumStringifier.h  HomeBoardSide.h  PieceType.h  PlayerType.h
Chaturaji/src/model/game/logic/: BoardQuerier.cpp  BoardQuerier.h  MovesManager.h  PossibleMovesCalculator.cpp  PossibleMovesCalculator.h  SpecialRulesChecker.h
Chaturaji/src/model/game/oude_garbage/: Bot.h  Game.cpp  Game.h
Chaturaji/src/model/game/state/: Board.cpp  Board.h  Dice.cpp  Dice.h  GameState.cpp  GameState.h
Chaturaji/src/model/io/: FileIO.cpp  FileIO.h
Chaturaji/src/model/logic/: MovesManager.cpp  MovesManager.h  Pattern.h  PatternMover.cpp  PatternMover.h  PossibleMovesCalculator.cpp  PossibleMovesCalculator.h  SpecialRulesChecker.cpp  SpecialRulesChecker.h
Chaturaji/src/view/: BoardPrinter.cpp  BoardPrinter.h  BoardView.cpp  BoardView.h  CLIView.cpp  CLIView.h  DiceAndMovesView.cpp  DiceAndMovesView.h  DieView.cpp  DieView.h  FileIOView.cpp  FileIOView.h  GameView.cpp  GameView.h  MainWindow.cpp  MainWindow.h  PieceView.cpp  PieceView.h  PieceWidgit.cpp  PieceWidgit.h  PlayerView.cpp  PlayerView.h  PlayersView.cpp  PlayersView.h  SquareView.cpp  SquareView.h  mainwindow.ui  startscreen.cpp  startscreen.h
Chaturaji/src/view/mainscreen/: MainWindow.cpp  MainWindow.h
Chaturaji/src/view/mainscreen/board/: BoardView.cpp  BoardView.h  PieceWidgit.cpp  PieceWidgit.h  SquareView.cpp  SquareView.h
Chaturaji/src/view/mainscreen/moves/: DiceAndMovesView.cpp  DiceAndMovesView.h  DieView.h
Chaturaji/src/view/mainscreen/player/: PlayerView.cpp  PlayerView.h  PlayersView.cpp  PlayersView.h
Chaturaji/src/view/mainscreen/toolbar/: FileIOView.cpp  FileIOView.h
Chaturaji/src/view/startscreen/: startscreen.cpp  startscreen.h  startscreen.ui
NAP/: app.py  (+4 more)
PRACTICUM_2_NETFLIX/: .gitignore  CMakeLists.txt  main.cpp  remove_null.py
PRACTICUM_2_NETFLIX/docs/: discussie.md
PRACTICUM_2_NETFLIX/src/: MovieOrShow.cpp  MovieOrShow.h  MovieOrShowPool.cpp  MovieOrShowPool.h  Netflix.cpp  Netflix.h  Pool.cpp  Pool.h  StringPool.cpp  StringPool.h  Trie.cpp  Trie.h  YearMap.cpp  YearMap.h  main.cpp
PRACTICUM_2_NETFLIX/src/modules/: CLI.cpp  CLI.h
PRACTICUM_2_NETFLIX/src/utils/: CSVHandler.cpp  CSVHandler.h  netflixCLI.cpp  netflixCLI.h
PRACTICUM_3_ZOOMNET/: CMakeLists.txt  Graph.cpp  Graph.h  discusion.md  main.cpp
PRACTICUM_3_ZOOMNET/docs/: discusion.md
PRACTICUM_3_ZOOMNET/modules/: CommandParser.cpp  CommandParser.h
PRACTICUM_3_ZOOMNET/src/: CityNode.cpp  CityNode.h  CityNodesLUT.cpp  CityNodesLUT.h  Connection.h  Graph.cpp  Graph.h  GraphStructs.cpp  GraphStructs.h  ZoomNet.cpp  ZoomNet.h  ZoomNetGraph.cpp  ZoomNetGraph.h
PRACTICUM_3_ZOOMNET/src/graph/: Graph.h  GraphStructs.cpp  GraphStructs.h
PRACTICUM_3_ZOOMNET/src/modules/: CLI.cpp  CLI.h  CommandParser.h
PRACTICUM_3_ZOOMNET/src/utils/: ZoomNetCLI.cpp  ZoomNetCLI.h  namedObjectLUT.cpp  namedObjectLUT.h
PRACTICUM_3_ZOOMNET/utils/: ZoomNetCLI.cpp  ZoomNetCLI.h
Taak_Augutus/: HouwenMathias.hs  MaxBipartiteMatching.hs  Taak-Augutus.cabal  gegenereerd.txt  gelijkenisAugustus.hs  homeswappingAugstusNoAlgo.hs  homeswappingAugustus.hs
Taak_Augutus/app/: Main.hs
Taak_Augutus/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Taak_Augutus/dist-newstyle/packagedb/ghc-9.6.7/: Taak-Augutus-0.1.0.0-inplace.conf  package.cache
alda-team3_ebbe_robin_mathias/PRACTICUM_3_ZOOMNET/: CMakeLists.txt
alda-team3_ebbe_robin_mathias/PRACTICUM_3_ZOOMNET/src/: ZoomNet.h
alda-team3_ebbe_robin_mathias/PRACTICUM_3_ZOOMNET/src/graph/: Graph.cpp
alda-team3_ebbe_robin_mathias/PRACTICUM_3_ZOOMNET/src/modules/: CLI.h
(+459 files in other folders)
